--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
 
 <body>
   <h1 class="name">Amena Baki Residential Model School</h1>
-  <div>
-    <ul class="section">
-      <li class="dis">Home</li>
-      <li class="dis">Gallery</li>
-      <li class="dis">Contact</li>
-      <li class="dis">Result</li>
-    </ul>
+  <div class="del">
+    <button class="raw"><a href="">Home</a></button>
+    <button class="raw"><a href="">Gallery</a></button>
+    <button class="raw"><a href="">Contact</a></button>
+    <button class="raw"><a href="">Result</a></button>
   </div>
+  <!-- <div>
+    <ul class="section">
+      <li class="dis"><a href="">Home</a></li>
+      <li class="dis"><a href="">Gallery</a></li>
+      <li class="dis"><a href="">Contact</a></li>
+      <li class="dis"><a href="">Result</a></li>
+    </ul>
+  </div> -->
+
 </body>
 
 </html>
